<resources>
    <string name="app_name">Team Iron Champs 54th Branch Rajender Nagar</string>

    <string name="password">password</string>

    <string name="login">Log In</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="member_list">Member List</string>
    <string name="title_activity_add_member">Add Member</string>

    <string name="new_member_form_first_name">First Name</string>
    <string name="new_member_form_last_name"> Last Name</string>
    <string name="new_member_form_number">Number</string>
    <string name="new_member_form_gender">Gender</string>
    <string name="new_member_form_month_start_date">Joining Date</string>
    <string name="new_member_form_height">Height</string>
    <string name="new_member_form_weight">Weight</string>
    <string name="new_member_form_dob">D.O.B</string>
    <string name="new_member_form_phone">Phone</string>
    <string name="new_member_form_emergency_phone">Emergency Phone</string>
    <string name="radio_text_male">male</string>
    <string name="radio_text_female">female</string>
    <string name="str_content_description">Profile Photo</string>
    <string name="title_member_list">Members</string>
    <string name="title_member_detail">Member Detail</string>

    <string name="add_member_form_dialog_save">Save</string>
    <string name="add_member_form_dialog_discard">Discard</string>
    <string name="str_menu_item_about">About The App</string>
    <string name="str_menu_item_change_password">Change Password</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="str_about_app"><![CDATA[This app is dedicated to the hardwork and efforts of Mr. Amit Singh, our mentor and guide at Team Iron Champs Gym, 54th Branch, Rajender Nagar.\nTeam AppDorks (Asif, Divyansh & Viraj).]]></string>

</resources>
